[package]
name = "cargo-outdated"
version = "0.11.2"
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Frederick Z. <frederick888@tsundere.moe>",
    "Ricky H. <ricky.hosfelt@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2021"
exclude = ["*.png"]
keywords = [
    "cargo",
    "subcommand",
    "dependencies",
    "cargo-subcommand",
    "deps",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kbknapp/cargo-outdated.git"
description = "Cargo subcommand for displaying when dependencies are out of date"

[badges]
travis-ci = {repository = "kbknapp/cargo-outdated"}

[[bin]]
name = "cargo-outdated"

[dependencies]
anyhow = "1.0"
cargo = "0.65.0"
env_logger = "0.10.0"
git2-curl = "0.15.0"
semver = "1.0.17"
serde = {version="1.0.160", features = ["derive"]}
serde_derive = "1.0.160"
serde_json = "1.0.96"
tabwriter = "1.2.1"
tempfile = "3"
toml = "~0.5.11"
clap = { version = "3.2.25", features = ["derive"] }

[dependencies.termcolor]
optional = true
version = "1.2"

[features]
debug = ["termcolor"]
vendored-openssl = ["cargo/vendored-openssl"]
default = []

[profile.release]
lto = true

[dev-dependencies]
pretty_assertions = "1.3.0"
